2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: crc field from zlib data should be treated as
	unsigned for 64bit support [Bug 2046846]

2008-08-08  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.4 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.4 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.4 release.

2008-08-08  Kevin Kenny   <kennykb@acm.org>

	* library/tzdata/CET:
	* library/tzdata/MET:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/America/Eirunepe:
	* library/tzdata/America/Santarem:
	* library/tzdata/America/Rio_Branco:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Europe/Belgrade:
	* library/tzdata/Europe/Berlin:
	* library/tzdata/Europe/Budapest:
	* library/tzdata/Europe/Sofia:
	* library/tzdata/Indian/Mauritius:  Olson's tzdata2008e.
	
2008-08-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclVar.c (TclLookupSimpleVar):  Retrieve the number of
	locals in the localCache from the CallFrame and not from the Proc
	which may have been mangled by a (broken?) recompile.  Backport
	from the HEAD.

2008-08-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Stopped faulty double-logging of errors to
	* tests/execute.test:	stack trace when a compile epoch bump triggers
	fallback to direct evaluation of commands in a compiled script.
	[Bug 2037338]

2008-07-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Corrected the timing of when the flag
	TCL_ALLOW_EXCEPTIONS is tested.

2008-07-29  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  fix [Bug 2030670] that cause
	TclStackRealloc to panic on rare corner cases. Thx ajpasadyn for
	diagnose and patch.

2008-07-28  Andreas Kupries  <andreask@activestate.com>
